# blinky

./: .gitignore  .gitmodules  Cargo.toml  Parts.kicad_sym  blinky.jlink  blinky.kicad_pcb  blinky.kicad_pro  blinky.kicad_sch  device.x  filter_pos.py  stand.scad
.config/: config.toml
Parts.pretty/: L_1008_2520Metric-Adjusted.kicad_mod  Skedd6.kicad_mod
src/: adc.rs  blinky.rs  chars.rs  config.rs  cpu.rs  debug.rs  leds.rs  marque.rs  pendsv.rs  pulse.rs  random.rs  vcell.rs
src/debug/: debug_core.rs
src/pulse/: text.rs
